# NewBCPL

./: .gitignore  Cargo.toml  README.md  sweep-results-2.txt
.cargo/: config.toml
docs/: corpus_sweep.md  fastload.md  jit_typedesc_lifetime.md  manifesto.md  module_system.md  pair_and_multilane_types.md  reference_audit.md  test_matrix.md  user_guide.md  wingui_bcpl_design.md
examples/: asm-float.bcl  asm-routine.bcl  asm-smoke.bcl  click-counter.bcl  diagnostic-demo.bcl  draw-square.bcl  event-pump.bcl  hello.bcl  paint-and-log.bcl  sound-test.bcl  text-pane.bcl  use-both.bcl  use-maths.bcl  wingui_draw.bcl  wingui_hello.bcl  wingui_procedural.bcl
modules-active/: audio.bcl  geom.bcl  igui.bcl  libhdr.bcl  maths.bcl
src/bcpl-wingui/: Cargo.toml
src/bcpl-wingui/src/: lib.rs
src/newbcpl-driver/: Cargo.toml
src/newbcpl-driver/src/: main.rs
src/newbcpl-ir/: Cargo.toml
src/newbcpl-ir/src/: ir.rs  lib.rs  lower.rs  print.rs
src/newbcpl-lexer/: Cargo.toml
src/newbcpl-lexer/src/: lib.rs
src/newbcpl-llvm/: Cargo.toml
src/newbcpl-llvm/src/: emit.rs  jit_mm.rs  lib.rs
src/newbcpl-llvm/tests/: host_recovery.rs
src/newbcpl-loader/: Cargo.toml
src/newbcpl-loader/src/: lib.rs
src/newbcpl-parser/: Cargo.toml
src/newbcpl-parser/src/: ast.rs  lib.rs  parser.rs
src/newbcpl-runtime/: Cargo.toml
src/newbcpl-runtime/src/: audio.rs  brk.rs  builtins.rs  gc.rs  igui_builtins.rs  lib.rs
src/newbcpl-runtime/src/igui/: bedit.rs  channels.rs  child.rs  cp_exports.rs  log_view.rs  menu.rs  mod.rs  text_view.rs  tools_menu.rs  window.rs
src/newbcpl-sema/: Cargo.toml
src/newbcpl-sema/src/: layout.rs  lib.rs
src/newbcpl-test-matrix/: Cargo.toml
src/newbcpl-test-matrix/src/: main.rs
tests/newbcpl-tests/: Cargo.toml
tests/newbcpl-tests/matrix/: generated.matrix
tests/newbcpl-tests/src/: lib.rs
tests/newbcpl-tests/tests/: asm_probes.rs  lexer_corpus.rs  lexer_smoke.rs  matrix_extra.rs  matrix_generated.rs  matrix_tier1_negatives.rs  matrix_tier2.rs  matrix_tier3.rs  matrix_tier4.rs  matrix_tier5.rs  matrix_tier6.rs  matrix_tier7.rs  parser_corpus.rs  parser_smoke.rs  sema_corpus.rs  sema_smoke.rs  user_guide.rs
