[workspace]
members = [
    "src/bcpl-wingui",
    "src/newbcpl-driver",
    "src/newbcpl-ir",
    "src/newbcpl-lexer",
    "src/newbcpl-llvm",
    "src/newbcpl-loader",
    "src/newbcpl-parser",
    "src/newbcpl-runtime",
    "src/newbcpl-sema",
    "src/newbcpl-test-matrix",
    "tests/newbcpl-tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
