[package]
name = "newbcpl-llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
new-asm = { path = "../../../new-asm" }
newbcpl-ir = { path = "../newbcpl-ir" }
newbcpl-parser = { path = "../newbcpl-parser" }
newbcpl-runtime = { path = "../newbcpl-runtime" }
newbcpl-sema = { path = "../newbcpl-sema" }
# Match NewCP's pin: Inkwell 0.9 against LLVM 22 (target-x86 family
# is what we need for x86_64-pc-windows-msvc).
inkwell = { version = "=0.9.0", default-features = false, features = ["llvm22-1", "target-x86"] }
