[package]
name = "newbcpl-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"

# NewAudio (2026-05-16) — game-focused SFX synth and ABC → MIDI
# playback. `newaudio-core` is pure Rust (preset SFX, tone / noise /
# FM, ADSR, WAV I/O); `newaudio-abc` is pure Rust (ABC parser +
# Standard MIDI File writer). Both compile everywhere so the
# `audio` shim layer's slot bookkeeping works on Linux/macOS too —
# only live playback is Windows-only. Source lives at
# `E:\NewAudio\NewAudio\`; ported into NewBCPL after NewFB shipped
# the same surface (mirror `newfb-runtime/src/audio.rs`).
newaudio-core = { path = "../../../NewAudio/NewAudio/crates/newaudio-core" }
newaudio-abc  = { path = "../../../NewAudio/NewAudio/crates/newaudio-abc" }

# bcpl-wingui sits next to newbcpl-runtime in the workspace but its
# builtins are loaded the same way as the runtime's own — the
# runtime's `builtins::builtin_addresses()` table includes the
# wingui entries via this dependency. Keeps the JIT-side resolution
# story uniform: one symbol table, one source of truth.
[target.'cfg(windows)'.dependencies.bcpl-wingui]
path = "../bcpl-wingui"

[target.'cfg(windows)'.dependencies]
windows-numerics = "0.3"

# NewAudio Windows runtime — `waveOut` PCM mixer + `midiOut`
# scheduler. Provides live playback for the `audio` module on
# Windows. On other targets the shims still register sounds and
# parse ABC, they just don't make noise.
newaudio-win = { path = "../../../NewAudio/NewAudio/crates/newaudio-win" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
]
