[package]
name = "newbcpl-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
newbcpl-lexer = { path = "../../src/newbcpl-lexer" }
newbcpl-parser = { path = "../../src/newbcpl-parser" }
newbcpl-sema = { path = "../../src/newbcpl-sema" }

[[test]]
name = "matrix_tier5"
path = "tests/matrix_tier5.rs"

[[test]]
name = "matrix_tier6"
path = "tests/matrix_tier6.rs"

[[test]]
name = "matrix_tier1_negatives"
path = "tests/matrix_tier1_negatives.rs"

[[test]]
name = "lexer_smoke"
path = "tests/lexer_smoke.rs"

[[test]]
name = "lexer_corpus"
path = "tests/lexer_corpus.rs"

[[test]]
name = "parser_smoke"
path = "tests/parser_smoke.rs"

[[test]]
name = "parser_corpus"
path = "tests/parser_corpus.rs"

[[test]]
name = "sema_smoke"
path = "tests/sema_smoke.rs"

[[test]]
name = "sema_corpus"
path = "tests/sema_corpus.rs"
